2006-12-12:
	- rewrote the _checkFreeSpace() and add better checking 
          for /boot (#70683)
2006-11-28:
	- add quirks rule to install ndiswrapper-utils-1.9 if 1.8 is 
          installed
2006-11-27:
	- fix caption in main glade file
	- use "Dpkg::StopOnError","False" option
2006-11-23:
	- initial feisty upload
2006-10-28:
	- catch errors when load_icon() does not work
2006-10-27:
	- reset self.read so that we do not loop endlessly when dpkg
	  sends unexpected data (lp: #68553)
2006-10-26:
	- make sure that xserver-xorg-video-all get installed if
	  xserver-xorg-driver-all was installed before (lp: #58424)
2006-10-21:
	- comment out old cdrom sources
	- demotions updated
2006-10-21:
	- fix incorrect arguments in fixup logging (lp: #67311)
	- more error logging
	- fix upgrade problems for people with unofficial compiz 
	  repositories (lp: #58424)
	- rosetta i18n updates
	- uploaded
2006-10-17:
	- ensure bzr, tomboy and xserver-xorg-input-* are properly 
          upgraded
	- don't fail if dpkg sents unexpected status lines (lp: #66013)
2006-10-16:
	- remove leftover references to ubuntu-base and
	  use ubuntu-minimal and ubuntu-standard instead
	- updated translations from rosetta
2006-10-13:
	- log held-back as well
2006-10-12:
	- check if cdrom.lst actually exists before copying it
2006-10-11:
	- keep pixbuf loader reference around so that we
          have one after the upgrade when the old 
          /usr/lib/gtk-2.0/loader/2.4.0/ loader is gone.
          This fixes the problem of missing stock-icons
	  after the upgrade. Also revalidate the theme
  	  in each step.
2006-10-10:
	- fix time calculation
	- fix kubuntu upgrade case
2006-10-06:
	- fix source.list rewrite corner case bug (#64159)
2006-10-04:
	- improve the space checking/logging
2006-09-29:
	- typo fix (thanks to Jane Silber) (lp: #62946)
2006-09-28:
	- bugfix in the cdromupgrade script
2006-09-27:
	- uploaded a version that only reverts the backport fetching